--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "template",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "authors": [
     "Dasha <dellachaise@gmail.com>"
   ],
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    
+    "normalize-css": "^4.2.0",
+    "jquery": "^3.1.0"
   }
 }
